# era-bellman-cuda

./: .gitignore  AUTHORS.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md
.github/: CODEOWNERS
.github/workflows/: release.yaml  secrets_scanner.yaml
src/: CMakeLists.txt  allocator.cu  allocator.cuh  bc.cu  bc.cuh  bellman-cuda-cub.cu  bellman-cuda-cub.cuh  bellman-cuda.cu  bellman-cuda.h  carry_chain.cuh  common.cuh  ec.cuh  ff.cu  ff.cuh  ff_config.cu  ff_config.cuh  ff_dispatch_st.cuh  ff_kernels.cu  ff_kernels.cuh  ff_storage.cuh  host_math.cuh  memory.cuh  msm.cu  msm.cuh  msm_kernels.cu  msm_kernels.cuh  ntt.cu  ntt.cuh  ntt_kernels.cu  ntt_kernels.cuh  pn.cu  pn.cuh  pn_kernels.cu  pn_kernels.cuh  ptx.cuh  utils.cu  utils.cuh
tests/: CMakeLists.txt  bc_test.cu  common.cu  common.cuh  ec_test.cu  ec_test_kernels.cu  ec_test_kernels.cuh  ff_test.cu  ff_test_kernels.cu  ff_test_kernels.cuh  montmul_test.cu  msm_bases.cuh  msm_test.cu  ntt_test.cu  pn_test.cu
